kubefiles/pythondockerpod.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: pythonapp
  labels:
    app: pythonapp
spec:
  replicas: 3
  selector: 
    matchLabels:
      app: pythonapp
  template:
    metadata:
      name: pythonapp
      labels: 
         app: pythonapp
    spec:
      containers:
      - name: pythonapp
        image: jamalshahverdiev/pyapp

---

kind: Service
apiVersion: v1
metadata:
  name: python-service
spec:
  selector:
    app: pythonapp
  ports:
    - port: 8080
